@@ -3,14 +3,17 @@ package common;
 import java.awt.Dimension;
 import java.awt.Toolkit;
 import java.awt.Window;
+import java.awt.event.ActionListener;
 import java.util.Locale;
 import java.util.prefs.Preferences;
 import javax.swing.AbstractButton;
+import javax.swing.JButton;
 import javax.swing.JComponent;
+import javax.swing.Timer;
 
 public enum ePref {
-    
-    lookandfeel("Metal", "Windows"),
+
+    //TODO установить значения по умолчанию в ePref
     url_src("http://localhost:8080/winweb/"),
     web_port("8080"),
     web_start("false"),
@@ -26,7 +29,6 @@ public enum ePref {
     prjprodID("-1"), //выбранный продукт для клиента
     orderID("-1"), //выбранный заказ клиента
     base_num("1"),
-    old("0"), //переключение на пред. версию
     base1("C:\\Okna\\fbase\\BASE.FDB?encoding=win1251", "C:\\Okna\\fbase\\BASE.FDB?encoding=win1251"),
     base2("C:\\Okna\\fbase\\BASE.FDB?encoding=win1251", "C:\\Okna\\fbase\\BASE2.FDB?encoding=win1251"),
     base3("C:\\Okna\\fbase\\BASE.FDB?encoding=win1251", "C:\\Okna\\fbase\\BASE3.FDB?encoding=win1251"),
@@ -36,26 +38,22 @@ public enum ePref {
     cmd_word("/usr/bin/oowriter ", "cmd /c start winword.exe "),
     cmd_excel("/usr/bin/oocalc ", "cmd /c start excel.exe "),
     cmd_html("/usr/bin/firefox ", "cmd /c start iexplore.exe "),
-    //    cmd_word("libreoffice -writer ", "cmd /c start winword.exe "), 
-    //    cmd_excel("libreoffice -calc ", "cmd /c start excel.exe "),
-    //    cmd_html("firefox ", "cmd /c start iexplore.exe "),
     fontname("Dialog"),
     fontsize("11");
-    
-    //private static Preferences prop = null; //Preferences.userRoot().node("frames." + this.getName());
-    public final static String filename = "okna.property"; //имя файла properties
 
     //Значения по умолчанию
     public String value;
 
+    //Системные переменные
+    public final static String filename = "okna.property"; //имя файла properties
     public static String password = "*";
     public static String role = null;
-    public static Locale locale = new Locale("ru", "RU");
+    public static Locale locale = Locale.of("ru", "RU");
     public static String fb = "fb";
     public static boolean dev = false;      //признак разработки и тестирования
     public static boolean locate = true;    //координаты фрейма разработки и тестирования
     public static String profile = "";      //профиль разработки и тестирования
-    private static AbstractButton btn;
+    private static Timer timer = new Timer(1000, null);
 
     //Значение по умолчанию
     ePref(String value) {
@@ -67,14 +65,18 @@ public enum ePref {
         String os = System.getProperty("os.name");
         this.value = os.equals("Linux") ? value1 : value2;
     }
-    
-    public static void read(Preferences pref, Window window, JComponent... comp) {
-        
+
+    public static void read(Window window, JButton btn, ActionListener listener, JComponent... comp) {
+
+        addButtonMouseListener(btn, listener);
+
+        Preferences pref = Preferences.userRoot().node(window.getClass().getSimpleName());
+
         Dimension screenSize = Toolkit.getDefaultToolkit().getScreenSize();
         Dimension frameSize = window.getSize();
 
-        int dy = pref.getInt("window.height", window.getHeight());
-        int dx = pref.getInt("window.width", window.getWidth());
+        int dy = pref.getInt("_height", window.getHeight());
+        int dx = pref.getInt("_width", window.getWidth());
 
         if (frameSize.height > screenSize.height) {
             frameSize.height = screenSize.height;
@@ -89,39 +91,31 @@ public enum ePref {
                     (screenSize.height - frameSize.height - 48) / 2 + 48);
         }
         window.setPreferredSize(frameSize);
-        window.pack();       
+        window.pack();
     }
 
-    public static void write(Preferences pref, Window frame, JComponent... comp) {
-       pref.putInt("window.height", frame.getHeight()); 
-       pref.putInt("window.width", frame.getWidth());
-    }
-    
-    public static void actionPerformed(java.awt.event.ActionEvent evt) {
-        System.out.println("common.ePref.actionPerformed()");
-//        Dimension frameSize = frame.getSize();
-        try {
-//            btn.setPressedIcon(new javax.swing.ImageIcon(getClass().getResource("/resource/img24/c036.gif")));
-//            String dy = String.valueOf(frame.getSize().height);
-//            String dx = String.valueOf(frame.getSize().width);
-//            eProp.load().setProperty(frame.getClass().getName() + "_height", dy);
-//            eProp.load().setProperty(frame.getClass().getName() + "_width", dx);
-//            eProp.save();
-        } finally {
-//            stop();
-        }
+    public static void write(Window window, JComponent... comp) {
+
+        Preferences pref = Preferences.userRoot().node(window.getClass().getSimpleName());
+
+        pref.putInt("_height", window.getHeight());
+        pref.putInt("_width", window.getWidth());
     }
 
-    public static void initListener() {
-        //super.addActionListener(this);
+    public static void addButtonMouseListener(JButton btn, ActionListener listener) {
+
         btn.addMouseListener(new java.awt.event.MouseAdapter() {
 
             public void mousePressed(java.awt.event.MouseEvent evt) {
-                //start();
+                for (ActionListener al : timer.getActionListeners()) {
+                    timer.removeActionListener(al);
+                }
+                timer.addActionListener(listener);
+                timer.start();
             }
 
             public void mouseReleased(java.awt.event.MouseEvent evt) {
-                //stop();
+                timer.stop();
                 btn.setPressedIcon(new javax.swing.ImageIcon(getClass().getResource("/resource/img24/c001.gif")));
             }
         });
